--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/bookmark-16x16.svg" />
+    <link rel="manifest" href="/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000">
+    <link rel="apple-touch-icon" href="/bookmark-144x144.svg">
+    <link rel="apple-mobile-web-app-status-bar" content="#000">
     <title>Notes</title>
   </head>
 
